--- a/to-toList/src/styles/Header.module.css
+++ b/to-toList/src/styles/Header.module.css
@@ -1,7 +1,7 @@
 .header{
-    max-height: 200px;
     background: var(--gray-700);
     display: flex;
+    align-items: center;
     justify-content: center;
     padding: 4.5rem 0;
 }
