--- a/to-toList/src/styles/TaskList.module.css
+++ b/to-toList/src/styles/TaskList.module.css
@@ -48,7 +48,7 @@
     border-radius: 8px;
     align-items: center;
     justify-content: center;
-    display: flex;
+    display: grid;
 }
 
 .taskContent .empty {
