--- a/to-toList/src/styles/Tasks.module.css
+++ b/to-toList/src/styles/Tasks.module.css
@@ -8,15 +8,31 @@
 }
 
 .circle{
+    width: 20px;
+    height: 20px;
     color: var(--blue-dark);
     margin-left: 1rem;
     margin-top: 1rem;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .trash{
-    color: var(--gray-300);
+    width: 20px;
+    height: 20px;
+    color: var(--gray-100);
     margin-right: 1rem;
     margin-top: 1rem;
+    background: none;
+    border: none;
+    cursor: pointer;
+    transition: color 0.2s, backround-color 0.2s;
+}
+
+.trash:hover{
+    color: var(--purple-light);
+
 }
 
 .task textarea{
