--- a/to-toList/src/global.css
+++ b/to-toList/src/global.css
@@ -20,21 +20,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 body{
     background: var(--gray-600);
-    color: var(--gray-300);
+    color: var(--gray-100);
+    min-height: 100vh;
     -webkit-font-smoothing: antialiased;
 }
 
-body, input, textarea, button{
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
-}
-
-:focus{
-    outline: transparent;
-    box-shadow: 0 0 0 2px var(--gray-400);
+button{
+    cursor: pointer;
 }
