--- a/to-toList/src/styles/TaskList.module.css
+++ b/to-toList/src/styles/TaskList.module.css
@@ -1,81 +1,60 @@
-.task {
-    margin: 2rem;
-    margin-top: 4rem;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    -webkit-font-smoothing: antialiased;
-    font-family: 'Roboto', sans-serif;
+.task{
+    width: 100%;
+    max-width: 46rem;
+    margin: 0 auto;
+    margin-top: 5.625rem;
+    padding: 0 1rem;
 }
 
-.taskHeader {
-    width: 46rem;
-    font-size: 0.875rem;
-    font-weight: bold;
+.header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 1.5rem;
 }
 
-.taskHeader .createdTasks{
+.header div{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 0.8rem;
+}
+
+.header p{
     color: var(--blue-light);
+    font-size: 0.875rem;
+    font-weight: 700;
 }
-.taskHeader .concludedTasks {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+.header p.taskConcluded{
     color: var(--purple-light);
 }
 
-.taskHeader button {
-    margin-left: 8px;
+.header span{
     background: var(--gray-400);
-    border: none;
     color: var(--gray-200);
+    padding: 3px 9px;
     border-radius: 999px;
-    width: 25px;
-    height: 19px;
+    font-size: 0.75rem;
+    font-weight: 700;
 }
 
-.taskContent {
-    width: 46rem;
-    margin-top: 24px;
-    border-top: 1px solid var(--gray-400);
-    border-radius: 8px;
-    align-items: center;
-    justify-content: center;
-    display: grid;
+.list{
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
 }
 
-.taskContent .empty {
+.empty {
+    margin-top: 4rem;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    margin: 2rem;
-}
-
-.taskContent .empty img {
-    margin: 0;
-    padding: 2rem;
-}
-
-.taskContent .empty span {
-    margin: 0;
-    align-items: center;
-    text-align: center;
-}
-
-.line1,
-.line2 {
+    gap: 1rem;
     color: var(--gray-300);
-    font-size: 1rem;
-}
-
-.line1 {
-    font-weight: bold;
+    text-align: center;
+  }
+  
+.empty p {
+    font-weight: 700;
 }
