--- a/to-toList/src/styles/Tasks.module.css
+++ b/to-toList/src/styles/Tasks.module.css
@@ -1,50 +1,59 @@
 .task{
+    width: 100%;
     background: var(--gray-500);
     border: 1px solid var(--gray-400);
-    border-radius: 8px;
-    width: 46rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
     display: flex;
-    
+    align-items: center;
+    justify-content: space-between;
+    gap: 0.75rem;
 }
 
-.circle{
-    width: 20px;
-    height: 20px;
-    color: var(--blue-dark);
-    margin-left: 1rem;
-    margin-top: 1rem;
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.trash{
-    width: 20px;
-    height: 20px;
+.task p{
+    font-size: 0.875rem;
+    line-height: 1.18rem;
     color: var(--gray-100);
-    margin-right: 1rem;
-    margin-top: 1rem;
+    margin-right: auto;
+}
+
+p.textCompleted {
+    color: var(--gray-300);
+    text-decoration: line-through;
+}
+
+.checkButton{
+    min-width: 1.125rem;
+    height: 1.125rem;
     background: none;
     border: none;
-    cursor: pointer;
-    transition: color 0.2s, backround-color 0.2s;
 }
 
-.trash:hover{
-    color: var(--purple-light);
-
-}
-
-.task textarea{
+.checkButton div{
     width: 100%;
-    height: auto;
-    min-height: 3rem;
-    background: transparent;
-    color: var(--gray-100);
-    border: 0;
-    resize: none;
-    border-radius: 8px;
-    line-height: 1.4;
-    margin: 1rem;
-    overflow: hidden;
+    height: 100%;
+    border: 2px solid var(--blue-light);
+    border-radius: 50%;
+}
+
+.deleteButton{
+    background: none;
+    border: none;
+    color: var(--gray-300);
+    transition: 0.2s;
+}
+
+.deleteButton:hover{
+    color: var(--red-danger);
+}
+
+.checkButton svg{
+    width: 100%;
+    height: 100%;
+    color: var(--purple-light);   
+}
+
+p.taskCompleted{
+    color: var(--gray-300);
+    text-decoration: line-through;
 }
